--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
         <javac srcdir="src" destdir="build/classes"/>
     </target>
 
-    <target name="jar">
+    <target name="jar" depends="compile">
         <mkdir dir="build/jar"/>
         <jar destfile="build/jar/Attempt1.jar" basedir="build/classes">
             <manifest>
