--- a/build.xml
+++ b/build.xml
@@ -1,49 +1,50 @@
 <project name="Attempt1" basedir="." default="main">
 
-    <path id="classpath">
-        <fileset dir="lib" includes="**/*.jar"/>
-    </path>
+	<path id="classpath">
+ 		<fileset dir="lib" includes="**/*.jar"/>
+	</path>
     
-    <target name="clean">
-        <delete dir="build"/>
-    </target>
+	<target name="clean">
+		<delete dir="build"/>
+	</target>
 
-    <target name="compile">
-        <mkdir dir="build/classes"/>
-        <javac srcdir="src" destdir="build/classes">
-            <classpath>
-                <path refid="classpath"/>
-            </classpath>
+	<target name="compile">
+		<mkdir dir="build/classes"/>
+		<javac srcdir="src" destdir="build/classes">
+			<classpath>
+				<path refid="classpath"/>
+			</classpath>
 		</javac>
-    </target>
+	</target>
 
-    <target name="jar" depends="compile">
-        <mkdir dir="build/jar"/>
-        <jar destfile="build/jar/Attempt1.jar" basedir="build/classes">
+	<mkdir dir="build/jar" />	
+	<manifestclasspath property="lib.list" jarfile="build/jar/Attempt1.jar">
+		    <classpath refid="classpath"/>
+	</manifestclasspath>
+	
+	<target name="jar" depends="compile">
+		<mkdir dir="build/jar"/>
+		<jar destfile="build/jar/Attempt1.jar" basedir="build/classes">
 			<fileset dir="build/classes" includes="**/*.class" />
-            <fileset dir="lib" includes="**/*.jar" />
-            <manifest>
-                <attribute name="Main-Class" value="Attempt1"/>
-				<attribute name="Class-Path" value="${classpath}"/>
-            </manifest>
-        </jar>
-    </target>
+			<fileset dir="lib" includes="**/*.jar" />
+			<manifest>
+				<attribute name="Main-Class" value="Attempt1"/>
+				<attribute name="Class-Path" value="${lib.list}"/>
+			</manifest>
 
-    <target name="run" depends="jar">
-         <java fork="true" classname="Attempt1">
-            <classpath>
-                <path refid="classpath"/>
-                <path location="**/*.jar"/>
-            </classpath>
+		</jar>
+	</target>
+
+	<target name="run" depends="jar">
+		<java fork="true" classname="Attempt1">
 			<arg path="data/train.csv"/>
 			<arg path="data/weather.csv"/>
 			<arg path="data/key.csv"/>
 			<arg path="data/test.csv"/>
-        </java>
-    </target>
+		</java>
+	</target>
 
-    <target name="clean-build" depends="clean,jar"/>
-
-    <target name="main" depends="clean,run"/>
+	<target name="clean-build" depends="clean,jar"/>
+	<target name="main" depends="clean,run"/>
 
 </project>
